--- a/output/categories.html
+++ b/output/categories.html
@@ -3,7 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>גולם壱佰</title>
-        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link rel="stylesheet" href="http://ssirai.github.io/blog/theme/css/main.css" />
+        <link href="http://ssirai.github.io/blog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="גולם壱佰 Atom Feed" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -12,13 +13,13 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">גולם壱佰 </a></h1>
+                <h1><a href="http://ssirai.github.io/blog/">גולם壱佰 </a></h1>
                 <nav><ul>
-                    <li><a href="/category/python.html">Python</a></li>
+                    <li><a href="http://ssirai.github.io/blog/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
-    <li><a href="/category/python.html">Python</a></li>
+    <li><a href="http://ssirai.github.io/blog/category/python.html">Python</a></li>
 </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
@@ -27,6 +28,13 @@
                             <li><a href="archives.html">Archive</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
+                <div class="social">
+                        <h2>social</h2>
+                        <ul>
+                            <li><a href="http://ssirai.github.io/blog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+
+                        </ul>
+                </div><!-- /.social -->
         </section><!-- /#extras -->
 
         <footer id="contentinfo" class="body">
