--- a/output/tags.html
+++ b/output/tags.html
@@ -3,7 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>גולם壱佰 - Tags</title>
-        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link rel="stylesheet" href="http://ssirai.github.io/blog/theme/css/main.css" />
+        <link href="http://ssirai.github.io/blog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="גולם壱佰 Atom Feed" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -12,15 +13,15 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">גולם壱佰 </a></h1>
+                <h1><a href="http://ssirai.github.io/blog/">גולם壱佰 </a></h1>
                 <nav><ul>
-                    <li><a href="/category/python.html">Python</a></li>
+                    <li><a href="http://ssirai.github.io/blog/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Tags for גולם壱佰</h1>        <li><a href="/tag/pelican.html">pelican</a> (1)</li>
-        <li><a href="/tag/publishing.html">publishing</a> (1)</li>
+    <h1>Tags for גולם壱佰</h1>        <li><a href="http://ssirai.github.io/blog/tag/pelican.html">pelican</a> (1)</li>
+        <li><a href="http://ssirai.github.io/blog/tag/publishing.html">publishing</a> (1)</li>
 </section>
 
         <section id="extras" class="body">
@@ -30,6 +31,13 @@
                             <li><a href="archives.html">Archive</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
+                <div class="social">
+                        <h2>social</h2>
+                        <ul>
+                            <li><a href="http://ssirai.github.io/blog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+
+                        </ul>
+                </div><!-- /.social -->
         </section><!-- /#extras -->
 
         <footer id="contentinfo" class="body">
