--- a/output/categories.html
+++ b/output/categories.html
@@ -1776,7 +1776,7 @@ jQuery(document).ready(function($) {
     <section>
         <h1>Blogroll</h2>
         <ul>
-            <li><a href="archives.html" target="_blank">Archive</a></li>
+            <li><a href="/archives.html" target="_blank">Archive</a></li>
         </ul>
     </section>
 </aside>    </div>
